--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
   <div class="container">
     <header class="header">
       <h1 class="title"><a href="/">Featured Minecraft Servers</a></h1>
-      <p class="subtitle">Join these amazing servers and start your adventure!</p>
+      <p class="subtitle">Join these amazing servers and start your adventure!!</p>
     </header>
 
     <div class="search-box">
