--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minecraft Servers</title>
   <style>
-
-
     .server-card .like-button {
       position: absolute;
       top: 1rem;
@@ -40,7 +38,7 @@
       margin-left: 0.5rem;
     }
 
-    
+
     .side-tab-navigation {
       margin-top: 2rem;
     }
@@ -142,8 +140,26 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
       min-height: 100vh;
       color: #f5f3ff;
-      background: #1e1b4b;
+      background: linear-gradient(135deg, #4a0080, #8a2be2);
+      background-attachment: fixed;
       overflow-x: hidden;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at center, rgba(138, 43, 226, 0.2), transparent 50%);
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    .neon-border {
+      border: 2px solid #ff00ff;
+      box-shadow: 0 0 10px #ff00ff, 0 0 20px #8a2be2, 0 0 40px #4a0080;
     }
 
     .background-container {
@@ -463,6 +479,7 @@
       box-shadow: 0 0 15px #22c55e;
       animation: pulse 2s infinite;
     }
+
     .status-offline {
       background-color: #ef4444;
       box-shadow: 0 0 8px #ef4444,
@@ -542,22 +559,24 @@
       <button id="pvp-servers-filter" class="side-tab-button">
         PvP Servers
       </button>
+      <button id="liked-servers-filter" class="side-tab-button">
+        <span id="like-icon">❤️</span> Liked Servers
+        <span id="liked-count">(0)</span>
+      </button>
 
-
-
-        <button id="liked-servers-filter" class="side-tab-button">
-          <span id="like-icon">❤️</span> Liked Servers
-          <span id="liked-count">(0)</span>
-        </button>
+      <!-- New button added in the same style -->
+      <button id="submit-server-filter" class="side-tab-button">
+        Submit a Server
+      </button>
     </div>
 
-      <ul>
-        <li>Total Servers: 9</li>
-        <li>Most Popular: Hypixel</li>
-        <li>Newest Addition: SM Penguin</li>
-      </ul>
+    <ul>
+      <li>Total Servers: 9</li>
+      <li>Most Popular: Hypixel</li>
+      <li>Newest Addition: SM Penguin</li>
+    </ul>
 
-    </div>
+  </div>
   </div>
 
 
@@ -607,7 +626,7 @@
     let likedServers = JSON.parse(localStorage.getItem('likedServers') || '[]');
 
     const servers = [
-      
+
       {
         id: 'lifesteal',
         name: 'SMP Lifesteal',
@@ -1125,6 +1144,123 @@
     createServerCards();
     updateServerStatus();
     setInterval(updateServerStatus, 300000);
+
+
+
+
+    // Server Submission Modal Functionality
+    function createServerSubmissionModal() {
+      const modalContainer = document.createElement('div');
+      modalContainer.id = 'server-submission-modal';
+      modalContainer.className = 'modal';
+      modalContainer.innerHTML = `<div id="server-submission-modal" class="modal" style="display: block; background: rgba(0, 0, 0, 0.6);">
+  <div class="modal-content server-submission-content" style="background: #1e1b4b; border-radius: 12px; max-width: 600px; margin: 2rem auto; padding: 2rem; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); position: relative;">
+    <button class="close-button submission-close" style="position: absolute; top: 12px; right: 12px; background: none; border: none; font-size: 1.5rem; color: #f5f3ff; cursor: pointer; opacity: 0.7; transition: opacity 0.3s;">×</button>
+    <div class="server-submission-body">
+      <h2 class="text-center mb-4 text-2xl font-bold" style="color: #d8b4fe; font-size: 1.75rem; text-align: center; margin-bottom: 1.5rem;">Submit a Minecraft Server</h2>
+      <form id="server-submission-form" class="space-y-4" style="display: flex; flex-direction: column; gap: 1rem;">
+        <div>
+          <label for="name" class="block mb-2" style="display: block; margin-bottom: 0.5rem; color: #f5f3ff;">Server Name</label>
+          <input type="text" id="submission-name" name="name" class="w-full p-2 border rounded bg-purple-900 border-purple-700" style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #4c1d95; background: #2a1a3f; color: #f5f3ff;" required>
+        </div>
+
+        <div>
+          <label for="ip" class="block mb-2" style="display: block; margin-bottom: 0.5rem; color: #f5f3ff;">Server IP</label>
+          <input type="text" id="submission-ip" name="ip" class="w-full p-2 border rounded bg-purple-900 border-purple-700" style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #4c1d95; background: #2a1a3f; color: #f5f3ff;" required>
+        </div>
+
+        <div>
+          <label for="description" class="block mb-2" style="display: block; margin-bottom: 0.5rem; color: #f5f3ff;">Short Description</label>
+          <textarea id="submission-description" name="description" class="w-full p-2 border rounded bg-purple-900 border-purple-700" style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #4c1d95; background: #2a1a3f; color: #f5f3ff;" rows="3"></textarea>
+        </div>
+
+        <div>
+          <label for="features" class="block mb-2" style="display: block; margin-bottom: 0.5rem; color: #f5f3ff;">Server Features</label>
+          <textarea id="submission-features" name="features" class="w-full p-2 border rounded bg-purple-900 border-purple-700" style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #4c1d95; background: #2a1a3f; color: #f5f3ff;" rows="3" placeholder="List key features (one per line)"></textarea>
+        </div>
+
+        <div>
+          <label for="rules" class="block mb-2" style="display: block; margin-bottom: 0.5rem; color: #f5f3ff;">Server Rules</label>
+          <textarea id="submission-rules" name="rules" class="w-full p-2 border rounded bg-purple-900 border-purple-700" style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #4c1d95; background: #2a1a3f; color: #f5f3ff;" rows="3" placeholder="List key rules (one per line)"></textarea>
+        </div>
+
+        <button type="submit" class="w-full p-2 bg-purple-700 text-white rounded hover:bg-purple-600 transition-colors" style="width: 100%; padding: 0.75rem; background: #6b21a8; color: #ffffff; border-radius: 8px; cursor: pointer; transition: background 0.3s; border: none; font-size: 1rem;">
+          Submit Server
+        </button>
+
+        <div id="submission-status" class="mt-4 text-center" style="margin-top: 1rem; text-align: center;">
+          <p class="text-green-500" style="color: #22c55e;">Server submitted successfully! Our team will review it soon.</p>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+`
+
+      document.body.appendChild(modalContainer);
+
+      const closeButton = modalContainer.querySelector('.submission-close');
+      closeButton.addEventListener('click', () => {
+        modalContainer.style.display = 'none';
+      });
+
+      const form = modalContainer.querySelector('#server-submission-form');
+      const statusElement = modalContainer.querySelector('#submission-status');
+
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+
+        const formData = {
+          name: document.getElementById('submission-name').value,
+          ip: document.getElementById('submission-ip').value,
+          description: document.getElementById('submission-description').value,
+          features: document.getElementById('submission-features').value,
+          rules: document.getElementById('submission-rules').value
+        };
+
+        if (!formData.name || !formData.ip) {
+          statusElement.innerHTML = '<p class="text-red-500">Please fill in server name and IP</p>';
+          return;
+        }
+
+        try {
+          console.log('Server submission:', formData);
+
+          statusElement.innerHTML = '<p class="text-green-500">Submitting server...</p>';
+
+          setTimeout(() => {
+            form.reset();
+            statusElement.innerHTML = '<p class="text-green-500">Server submitted successfully! Our team will review it soon.</p>';
+          }, 1500);
+        } catch (error) {
+          console.error('Submission failed:', error);
+          statusElement.innerHTML = '<p class="text-red-500">Submission failed. Please try again.</p>';
+        }
+      });
+
+      modalContainer.addEventListener('click', (e) => {
+        if (e.target === modalContainer) {
+          modalContainer.style.display = 'none';
+        }
+      });
+
+      return modalContainer;
+    }
+
+    // Add event listener to submission button in side tab
+    document.getElementById('submit-server-filter').addEventListener('click', () => {
+      let submissionModal = document.getElementById('server-submission-modal');
+      if (!submissionModal) {
+        submissionModal = createServerSubmissionModal();
+      }
+
+      submissionModal.style.display = 'block';
+
+      const hamburgerMenu = document.querySelector('.hamburger-menu');
+      const sideTab = document.querySelector('.side-tab');
+      hamburgerMenu.classList.remove('active');
+      sideTab.classList.remove('open');
+    });
   </script>
 
 
