--- a/index.html
+++ b/index.html
@@ -790,9 +790,9 @@
           "Dynamic political landscape"
         ],
         images: [
-          "/imagefolder/placeholder.png",
-          "/imagefolder/placeholder.png",
-          "/imagefolder/placeholder.png"
+          "/imagefolder/ea.png",
+          "/imagefolder/ii.png",
+          "/imagefolder/we.gif"
         ],
         rules: [
           "No exploiting or hacking",
@@ -818,7 +818,7 @@
         images: [
           "/imagefolder/web.webp",
           "/imagefolder/reuk.webp",
-          "/imagefolder/placeholder.png"
+          "/imagefolder/br.jpg"
         ],
         rules: [
           "No cheating or hacks",
@@ -842,9 +842,9 @@
           "Active staff team"
         ],
         images: [
-          "/imagefolder/placeholder.png",
-          "/imagefolder/placeholder.png",
-          "/imagefolder/placeholder.png"
+          "/imagefolder/ps.avif",
+          "/imagefolder/psp.png",
+          "/imagefolder/min.jpg"
         ],
         rules: [
           "No hacking or cheating",
