--- a/index.html
+++ b/index.html
@@ -1261,9 +1261,14 @@
       hamburgerMenu.classList.remove('active');
       sideTab.classList.remove('open');
     });
+    
   </script>
 
-
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
+  
 </body>
 
 
